--- a/empleados.html
+++ b/empleados.html
@@ -26,7 +26,7 @@
 		<div class="fixed-top">
 			<nav class="navbar navbar-expand-lg navbar-light bg-white">
 				<a class="navbar-brand mr-0" href="index.html">
-					<img src="img/logo/Imagen1.png" alt="Torres y cuadros" width="150px">
+					<img src="img/logo/Imagen1.png" alt="Torres y cuadros" width="150">
 				</a>
 				<div class="contacto pl-2 font-weight-bold">
 					<h3 class="text-dark mb-0">Inmobiliaria</h3>
@@ -44,8 +44,7 @@
 							<a class="nav-link" href="index.html">Inicio</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#" data-toggle="modal"
-								data-target="#en-construccion">Servicios</a>
+							<a class="nav-link" href="#" data-toggle="modal" data-target="#en-construccion">Servicios</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="propietarios.html">Propietarios</a>
@@ -54,17 +53,15 @@
 							<a class="nav-link" href="arrendatario.html">Arrendatario</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link"
-								href="https://www.ciencuadras.com/inmobiliaria/torres-y-cuadros-asociados-sas-8394"
+							<a class="nav-link" href="https://www.ciencuadras.com/inmobiliaria/torres-y-cuadros-asociados-sas-8394"
 								target="_blank">Inmuebles</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#" data-toggle="modal"
-								data-target="#en-construccion">Mantenimiento</a>
+							<a class="nav-link" href="mantenimiento.html">Mantenimiento</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm"
-								target="_blank">Pagos PSE</a>
+							<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm" target="_blank">Pagos
+								PSE</a>
 						</li>
 						<li class="nav-item active">
 							<a class="nav-link" href="empleados.html">Empleados</a>
@@ -87,7 +84,7 @@
 
 
 
-	<!-- <div class="completo"> -->
+	
 
 	<iframe class="completo" src="https://www.simiinmobiliarias.com/sj/" frameborder="0"></iframe>
 
@@ -120,7 +117,7 @@
 				<!--Footer-->
 				<div class="modal-footer justify-content-center">
 
-					<a type="button" class="btn btn-outline-warning waves-effect" data-dismiss="modal">Cerrar</a>
+					<a class="btn btn-outline-warning waves-effect" data-dismiss="modal">Cerrar</a>
 				</div>
 			</div>
 			<!--/.Content-->
@@ -131,13 +128,13 @@
 
 	<!-- SCRIPTS -->
 	<!-- JQuery -->
-	<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+	<script src="js/jquery-3.3.1.min.js"></script>
 	<!-- Bootstrap tooltips -->
-	<script type="text/javascript" src="js/popper.min.js"></script>
+	<script src="js/popper.min.js"></script>
 	<!-- Bootstrap core JavaScript -->
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<!-- MDB core JavaScript -->
-	<script type="text/javascript" src="js/mdb.min.js"></script>
+	<script src="js/mdb.min.js"></script>
 </body>
 
 </html>
