--- a/propietarios.html
+++ b/propietarios.html
@@ -38,14 +38,13 @@
 					aria-controls="nav-superior" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
-				<div class="collapse navbar-collapse justify-content-end" id="nav-superior">
+				<div class="collapse navbar-collapse  justify-content-end" id="nav-superior">
 					<ul class="navbar-nav text-center">
 						<li class="nav-item">
 							<a class="nav-link" href="index.html">Inicio</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#" data-toggle="modal"
-								data-target="#en-construccion">Servicios</a>
+							<a class="nav-link" href="#" data-toggle="modal" data-target="#en-construccion">Servicios</a>
 						</li>
 						<li class="nav-item active">
 							<a class="nav-link" href="propietarios.html">Propietarios</a>
@@ -54,17 +53,15 @@
 							<a class="nav-link" href="arrendatario.html">Arrendatario</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link"
-								href="https://www.ciencuadras.com/inmobiliaria/torres-y-cuadros-asociados-sas-8394"
+							<a class="nav-link" href="https://www.ciencuadras.com/inmobiliaria/torres-y-cuadros-asociados-sas-8394"
 								target="_blank">Inmuebles</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#" data-toggle="modal"
-								data-target="#en-construccion">Mantenimiento</a>
+							<a class="nav-link" href="mantenimiento.html">Mantenimiento</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm"
-								target="_blank">Pagos PSE</a>
+							<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm" target="_blank">Pagos
+								PSE</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="empleados.html">Empleados</a>
@@ -87,10 +84,10 @@
 
 
 
-	<div class="completo">
+	<main>
 		<iframe class="completo" src="https://www.simiinmobiliarias.com/base/simired/simidocs/index.php?inmo=552&tipo=1"
 			frameborder="0"></iframe>
-	</div>
+	</main>
 
 
 
@@ -131,13 +128,13 @@
 
 	<!-- SCRIPTS -->
 	<!-- JQuery -->
-	<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+	<script src="js/jquery-3.3.1.min.js"></script>
 	<!-- Bootstrap tooltips -->
-	<script type="text/javascript" src="js/popper.min.js"></script>
+	<script src="js/popper.min.js"></script>
 	<!-- Bootstrap core JavaScript -->
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<!-- MDB core JavaScript -->
-	<script type="text/javascript" src="js/mdb.min.js"></script>
+	<script src="js/mdb.min.js"></script>
 </body>
 
 </html>
