--- a/arrendatario.html
+++ b/arrendatario.html
@@ -26,7 +26,7 @@
 		<div class="fixed-top">
 			<nav class="navbar navbar-expand-lg navbar-light bg-white">
 				<a class="navbar-brand mr-0" href="index.html">
-					<img src="img/logo/Imagen1.png" alt="Torres y cuadros" width="150px">
+					<img src="img/logo/Imagen1.png" alt="Torres y cuadros" width="150">
 				</a>
 				<div class="contacto pl-2 font-weight-bold">
 					<h3 class="text-dark mb-0">Inmobiliaria</h3>
@@ -44,8 +44,7 @@
 							<a class="nav-link" href="index.html">Inicio</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#" data-toggle="modal"
-								data-target="#en-construccion">Servicios</a>
+							<a class="nav-link" href="#" data-toggle="modal" data-target="#en-construccion">Servicios</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="propietarios.html">Propietarios</a>
@@ -54,17 +53,15 @@
 							<a class="nav-link" href="arrendatario.html">Arrendatario</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link"
-								href="https://www.ciencuadras.com/inmobiliaria/torres-y-cuadros-asociados-sas-8394"
+							<a class="nav-link" href="https://www.ciencuadras.com/inmobiliaria/torres-y-cuadros-asociados-sas-8394"
 								target="_blank">Inmuebles</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#" data-toggle="modal"
-								data-target="#en-construccion">Mantenimiento</a>
+							<a class="nav-link" href="mantenimiento.html">Mantenimiento</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm"
-								target="_blank">Pagos PSE</a>
+							<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm" target="_blank">Pagos
+								PSE</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="empleados.html">Empleados</a>
@@ -120,7 +117,7 @@
 				<!--Footer-->
 				<div class="modal-footer justify-content-center">
 
-					<a type="button" class="btn btn-outline-warning waves-effect" data-dismiss="modal">Cerrar</a>
+					<a class="btn btn-outline-warning waves-effect" data-dismiss="modal">Cerrar</a>
 				</div>
 			</div>
 			<!--/.Content-->
@@ -131,13 +128,50 @@
 
 	<!-- SCRIPTS -->
 	<!-- JQuery -->
-	<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+	<script src="js/jquery-3.3.1.min.js"></script>
 	<!-- Bootstrap tooltips -->
-	<script type="text/javascript" src="js/popper.min.js"></script>
+	<script src="js/popper.min.js"></script>
 	<!-- Bootstrap core JavaScript -->
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<!-- MDB core JavaScript -->
-	<script type="text/javascript" src="js/mdb.min.js"></script>
+	<script src="js/mdb.min.js"></script>
+	<!-- Code injected by live-server -->
+	<script>
+		// <![CDATA[  <-- For SVG support
+		if ('WebSocket' in window) {
+			(function () {
+				function refreshCSS() {
+					var sheets = [].slice.call(document.getElementsByTagName("link"));
+					var head = document.getElementsByTagName("head")[0];
+					for (var i = 0; i < sheets.length; ++i) {
+						var elem = sheets[i];
+						head.removeChild(elem);
+						var rel = elem.rel;
+						if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+							var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
+							elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
+						}
+						head.appendChild(elem);
+					}
+				}
+				var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
+				var address = protocol + window.location.host + window.location.pathname + '/ws';
+				var socket = new WebSocket(address);
+				socket.onmessage = function (msg) {
+					if (msg.data == 'reload') window.location.reload();
+					else if (msg.data == 'refreshcss') refreshCSS();
+				};
+				if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
+					console.log('Live reload enabled.');
+					sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
+				}
+			})();
+		}
+		else {
+			console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
+		}
+	// ]]>
+	</script>
 </body>
 
 </html>
