--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
 			<a class="navbar-brand mr-0" href="index.html">
-				<img src="img/logo/Imagen1.png" alt="Torres y cuadros" width="150px">
+				<img src="img/logo/Imagen1.png" alt="Torres y cuadros" width="150">
 			</a>
 			<div class="contacto pl-2 font-weight-bold">
 				<h3 class="text-dark mb-0">Inmobiliaria</h3>
@@ -55,17 +55,15 @@
 						<a class="nav-link" href="arrendatario.html">Arrendatario</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link"
-							href="https://www.ciencuadras.com/inmobiliaria/torres-y-cuadros-asociados-sas-8394"
+						<a class="nav-link" href="https://www.ciencuadras.com/inmobiliaria/torres-y-cuadros-asociados-sas-8394"
 							target="_blank">Inmuebles</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#" data-toggle="modal"
-							data-target="#en-construccion">Mantenimiento</a>
+						<a class="nav-link" href="mantenimiento.html">Mantenimiento</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm"
-							target="_blank">Pagos PSE</a>
+						<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm" target="_blank">Pagos
+							PSE</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="empleados.html">Empleados</a>
@@ -142,8 +140,7 @@
 					</a>
 				</li>
 				<li id="btn-mantenimientos">
-					<a class="d-flex justify-content-center align-items-center" href="#" data-toggle="modal"
-						data-target="#en-construccion">
+					<a class="d-flex justify-content-center align-items-center" href="mantenimiento.html">
 						<div class="text-center">
 							<img class="m-auto" src="img/PNG/mantenimiento.png" alt="mantenimiento">
 							<h3 class="text-center text-naranja mb-0 mt-1">MANTENIMIENTOS</h3>
@@ -154,7 +151,7 @@
 					<a class="d-flex justify-content-center align-items-center"
 						href="https://www.e-collect.com/customers/Torresycuadros.htm" target="_blank">
 						<div class="text-center">
-							<img class="m-auto" src="img/PNG/pagos-pse.png">
+							<img class="m-auto" src="img/PNG/pagos-pse.png" alt="pagos PSE">
 							<h3 class="text-center text-naranja mb-0 mt-1">PAGOS PSE</h3>
 						</div>
 					</a>
@@ -199,7 +196,7 @@
 				<!--Footer-->
 				<div class="modal-footer justify-content-center">
 
-					<a type="button" class="btn btn-outline-warning waves-effect" data-dismiss="modal">Cerrar</a>
+					<a class="btn btn-outline-warning waves-effect" data-dismiss="modal">Cerrar</a>
 				</div>
 			</div>
 			<!--/.Content-->
@@ -213,13 +210,13 @@
 
 	<!-- SCRIPTS -->
 	<!-- JQuery -->
-	<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+	<script src="js/jquery-3.3.1.min.js"></script>
 	<!-- Bootstrap tooltips -->
-	<script type="text/javascript" src="js/popper.min.js"></script>
+	<script src="js/popper.min.js"></script>
 	<!-- Bootstrap core JavaScript -->
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<!-- MDB core JavaScript -->
-	<script type="text/javascript" src="js/mdb.min.js"></script>
+	<script src="js/mdb.min.js"></script>
 </body>
 
 </html>
