--- a/inmuebles.html
+++ b/inmuebles.html
@@ -26,7 +26,7 @@
 		<div class="fixed-top">
 			<nav class="navbar navbar-expand-lg navbar-light bg-white">
 				<a class="navbar-brand mr-0" href="index.html">
-					<img src="img/logo/Imagen1.png" alt="Torres y cuadros" width="150px">
+					<img src="img/logo/Imagen1.png" alt="Torres y cuadros" width="150">
 				</a>
 				<div class="contacto pl-2 font-weight-bold">
 					<h3 class="text-dark mb-0">Inmobiliaria</h3>
@@ -117,7 +117,7 @@
 				<!--Footer-->
 				<div class="modal-footer justify-content-center">
 
-					<a type="button" class="btn btn-outline-warning waves-effect" data-dismiss="modal">Cerrar</a>
+					<a class="btn btn-outline-warning waves-effect" data-dismiss="modal">Cerrar</a>
 				</div>
 			</div>
 			<!--/.Content-->
@@ -128,13 +128,13 @@
 
 	<!-- SCRIPTS -->
 	<!-- JQuery -->
-	<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+	<script src="js/jquery-3.3.1.min.js"></script>
 	<!-- Bootstrap tooltips -->
-	<script type="text/javascript" src="js/popper.min.js"></script>
+	<script src="js/popper.min.js"></script>
 	<!-- Bootstrap core JavaScript -->
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<!-- MDB core JavaScript -->
-	<script type="text/javascript" src="js/mdb.min.js"></script>
+	<script src="js/mdb.min.js"></script>
 </body>
 
 </html>
