--- a/arrendatario.html
+++ b/arrendatario.html
@@ -82,14 +82,10 @@
 	</header>
 
 
-
-
-	<div class="completo">
+	<main>
 		<iframe class="completo" src="https://www.simiinmobiliarias.com/base/simired/simidocs/index.php?inmo=552&tipo=2"
 			frameborder="0"></iframe>
-	</div>
-
-
+	</main>
 
 	<!-- Mensaje de en construccion -->
 	<div class="modal fade" id="en-construccion" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
