--- a/inmuebles.html
+++ b/inmuebles.html
@@ -44,8 +44,7 @@
 							<a class="nav-link" href="index.html">Inicio</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#" data-toggle="modal"
-								data-target="#en-construccion">Servicios</a>
+							<a class="nav-link" href="#" data-toggle="modal" data-target="#en-construccion">Servicios</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="propietarios.html">Propietarios</a>
@@ -54,17 +53,15 @@
 							<a class="nav-link" href="arrendatario.html">Arrendatario</a>
 						</li>
 						<li class="nav-item active">
-							<a class="nav-link"
-								href="https://www.ciencuadras.com/inmobiliaria/torres-y-cuadros-asociados-sas-8394"
+							<a class="nav-link" href="https://www.ciencuadras.com/inmobiliaria/torres-y-cuadros-asociados-sas-8394"
 								target="_blank">Inmuebles</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#" data-toggle="modal"
-								data-target="#en-construccion">Mantenimiento</a>
+							<a class="nav-link" href="#" data-toggle="modal" data-target="#en-construccion">Mantenimiento</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm"
-								target="_blank">Pagos PSE</a>
+							<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm" target="_blank">Pagos
+								PSE</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="empleados.html">Empleados</a>
@@ -84,10 +81,10 @@
 		</div>
 	</header>
 
-	<div class="completo">
+	<main>
 		<iframe class="completo" src="https://www.ciencuadras.com/inmobiliaria/torres-y-cuadros-asociados-sas-8394"
 			frameborder="0"></iframe>
-	</div>
+	</main>
 
 
 
