actualizaci´pm fr numeros

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			</a>
 			<div class="contacto pl-2 font-weight-bold">
 				<h3 class="text-dark mb-0">Inmobiliaria</h3>
-				<p class="text-dark mb-0">TELEFONOS 4716823 - 3157025141</p>
+				<a class="text-dark mb-0" href="tel:+031794364">TELEFONO PBX: 7 943 643</a>
 				<p class="text-dark mb-0">CR 27 No 53 - 61 OF 504 BOGOTÁ</p>
 				<p class="text-dark mb-0">CL 3D No 14 - 51 OF 303 ZIPAQUIRÁ</p>
 			</div>
@@ -59,7 +59,7 @@
 							target="_blank">Inmuebles</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="mantenimiento.html">Mantenimiento</a>
+						<a class="nav-link" href="#" data-toggle="modal" data-target="#en-construccion">Mantenimiento</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm" target="_blank">Pagos
@@ -140,7 +140,7 @@
 					</a>
 				</li>
 				<li id="btn-mantenimientos">
-					<a class="d-flex justify-content-center align-items-center" href="mantenimiento.html">
+					<a class="d-flex justify-content-center align-items-center" href="#" data-toggle="modal" data-target="#en-construccion">
 						<div class="text-center">
 							<img class="m-auto" src="img/PNG/mantenimiento.png" alt="mantenimiento">
 							<h3 class="text-center text-naranja mb-0 mt-1">MANTENIMIENTOS</h3>
