--- a/Net2phone.html
+++ b/Net2phone.html
@@ -56,14 +56,14 @@
 							<a class="nav-link" href="https://www.ciencuadras.com/inmobiliaria/torres-y-cuadros-asociados-sas-8394"
 								target="_blank">Inmuebles</a>
 						</li>
-						<li class="nav-item active">
+						<li class="nav-item">
 							<a class="nav-link" href="#" data-toggle="modal" data-target="#en-construccion">Mantenimiento</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm" target="_blank">Pagos
 								PSE</a>
 						</li>
-						<li class="nav-item">
+						<li class="nav-item active">
 							<a class="nav-link" href="empleados.html">Empleados</a>
 						</li>
 					</ul>
@@ -74,7 +74,7 @@
 					<li class="mt-1"><a class="white-text" href="index.html"> Inicio </a></li>
 					<p class="m-1"> / </p>
 					<li class="mt-1">
-						<p> Mantenimiento </p>
+						<p> Empleados </p>
 					</li>
 				</ul>
 			</div>
@@ -82,11 +82,13 @@
 	</header>
 
 
-	<main>
-		<iframe class="completo"
-			src="https://docs.google.com/forms/d/e/1FAIpQLSfy5phMZ6G9Iw5pdRF_dt7I-HB4AVfztHPQIghLRYRIpfQTpQ/viewform?embedded=true"
-			frameborder="0" marginheight="0" marginwidth="0">Cargando...</iframe>
-	</main>
+
+
+	
+<main>
+	<iframe class="completo" src="https://portalco.net2phoneoffice.com/" frameborder="0"></iframe>
+</main>
+
 
 
 
