--- a/inmuebles.html
+++ b/inmuebles.html
@@ -30,7 +30,7 @@
 				</a>
 				<div class="contacto pl-2 font-weight-bold">
 					<h3 class="text-dark mb-0">Inmobiliaria</h3>
-					<p class="text-dark mb-0">TELEFONOS 4716823 - 3157025141</p>
+					<a class="text-dark mb-0" href="tel:+031794364">TELEFONO PBX: 7 943 643</a>
 					<p class="text-dark mb-0">CR 27 No 53 - 61 OF 504 BOGOTÁ</p>
 					<p class="text-dark mb-0">CL 3D No 14 - 51 OF 303 ZIPAQUIRÁ</p>
 				</div>
