Agregamos btn de pbx

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 
 <body>
 	<header>
-		<nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
-			<a class="navbar-brand mr-0" href="index.html">
-				<img src="img/logo/Imagen1.png" alt="Torres y cuadros" width="150">
-			</a>
+		<nav class="navbar navbar-expand-xl navbar-light bg-white fixed-top">
+			<div class="navbar-brand mr-0" href="index.html">
+				<a href="index.html"><img src="img/logo/Imagen1.png" alt="Torres y cuadros" class="mb-xs-1"></a>
+				<br><a class="text-dark font-weight-bold" href="tel:+031794364">PBX: 7 943 643 <i class="fas fa-phone"></i></a>
+			</div>
 			<div class="contacto pl-2 font-weight-bold">
 				<h3 class="text-dark mb-0">Inmobiliaria</h3>
-				<a class="text-dark mb-0" href="tel:+031794364">TELEFONO PBX: 7 943 643</a>
 				<p class="text-dark mb-0">CR 27 No 53 - 61 OF 504 BOGOTÁ</p>
 				<p class="text-dark mb-0">CL 3D No 14 - 51 OF 303 ZIPAQUIRÁ</p>
 			</div>
@@ -65,8 +65,16 @@
 						<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm" target="_blank">Pagos
 							PSE</a>
 					</li>
-					<li class="nav-item">
+					<!-- <li class="nav-item">
 						<a class="nav-link" href="empleados.html">Empleados</a>
+					</li> -->
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" id="Empleados" data-toggle="dropdown"
+						  aria-haspopup="true" aria-expanded="false">Empleados</a>
+						<div class="dropdown-menu dropdown-primary" aria-labelledby="Empleados">
+						  <a class="dropdown-item" href="empleados.html">CRM</a>
+						  <a class="dropdown-item" href="https://portalco.net2phoneoffice.com/" target="_blank">PBX</a>
+						</div>
 					</li>
 				</ul>
 			</div>
@@ -156,11 +164,23 @@
 						</div>
 					</a>
 				</li>
-				<li id="btn-empleados">
-					<a class="d-flex justify-content-center align-items-center" href="empleados.html">
+				<li id="btn-empleados" class="position-relative">
+					<a class="d-flex justify-content-center align-items-center" href="">
 						<div class="text-center">
 							<img class="m-auto" src="img/PNG/empleados.png" alt="empleados">
 							<h3 class="text-center text-naranja mb-0 mt-1">EMPLEADOS</h3>
+						</div>
+					</a>
+					<a class="d-flex justify-content-center align-items-center btn-emergente btn-emergente1" href="empleados.html">
+						<div class="text-center">
+							<img class="m-auto" src="img/PNG/empleados.png" alt="empleados">
+							<h3 class="text-center text-naranja text-white mb-0 mt-1">CRM</h3>
+						</div>
+					</a>
+					<a class="d-flex justify-content-center align-items-center btn-emergente btn-emergente2" href="https://portalco.net2phoneoffice.com/">
+						<div class="text-center">
+							<img class="m-auto" src="img/PNG/empleados.png" alt="empleados">
+							<h3 class="text-center text-naranja text-white mb-0 mt-1">PBX</h3>
 						</div>
 					</a>
 				</li>
