--- a/empleados.html
+++ b/empleados.html
@@ -24,13 +24,13 @@
 <body>
 	<header>
 		<div class="fixed-top">
-			<nav class="navbar navbar-expand-lg navbar-light bg-white">
-				<a class="navbar-brand mr-0" href="index.html">
-					<img src="img/logo/Imagen1.png" alt="Torres y cuadros" width="150">
-				</a>
+			<nav class="navbar navbar-expand-xl navbar-light bg-white fixed-top">
+				<div class="navbar-brand mr-0" href="index.html">
+					<a href="index.html"><img src="img/logo/Imagen1.png" alt="Torres y cuadros" class="mb-xs-1"></a>
+					<br><a class="text-dark font-weight-bold" href="tel:+031794364">PBX: 7 943 643 <i class="fas fa-phone"></i></a>
+				</div>
 				<div class="contacto pl-2 font-weight-bold">
 					<h3 class="text-dark mb-0">Inmobiliaria</h3>
-					<a class="text-dark mb-0" href="tel:+031794364">TELEFONO PBX: 7 943 643</a>
 					<p class="text-dark mb-0">CR 27 No 53 - 61 OF 504 BOGOTÁ</p>
 					<p class="text-dark mb-0">CL 3D No 14 - 51 OF 303 ZIPAQUIRÁ</p>
 				</div>
@@ -63,8 +63,16 @@
 							<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm" target="_blank">Pagos
 								PSE</a>
 						</li>
-						<li class="nav-item active">
+						<!-- <li class="nav-item">
 							<a class="nav-link" href="empleados.html">Empleados</a>
+						</li> -->
+						<li class="nav-item dropdown active">
+							<a class="nav-link dropdown-toggle" id="Empleados" data-toggle="dropdown"
+								aria-haspopup="true" aria-expanded="false">Empleados</a>
+							<div class="dropdown-menu dropdown-primary" aria-labelledby="Empleados">
+								<a class="dropdown-item" href="empleados.html">CRM</a>
+								<a class="dropdown-item" href="https://portalco.net2phoneoffice.com/" target="_blank">PBX</a>
+							</div>
 						</li>
 					</ul>
 				</div>
