--- a/propietarios.html
+++ b/propietarios.html
@@ -24,51 +24,59 @@
 <body>
 	<header>
 		<div class="fixed-top">
-			<nav class="navbar navbar-expand-lg navbar-light bg-white">
-				<a class="navbar-brand mr-0" href="index.html">
-					<img src="img/logo/Imagen1.png" alt="Torres y cuadros" width="150px">
-				</a>
-				<div class="contacto pl-2 font-weight-bold">
-					<h3 class="text-dark mb-0">Inmobiliaria</h3>
-					<a class="text-dark mb-0" href="tel:+031794364">TELEFONO PBX: 7 943 643</a>
-					<p class="text-dark mb-0">CR 27 No 53 - 61 OF 504 BOGOTÁ</p>
-					<p class="text-dark mb-0">CL 3D No 14 - 51 OF 303 ZIPAQUIRÁ</p>
-				</div>
-				<button class="navbar-toggler p-0" type="button" data-toggle="collapse" data-target="#nav-superior"
-					aria-controls="nav-superior" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse  justify-content-end" id="nav-superior">
-					<ul class="navbar-nav text-center">
-						<li class="nav-item">
-							<a class="nav-link" href="index.html">Inicio</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#" data-toggle="modal" data-target="#en-construccion">Servicios</a>
-						</li>
-						<li class="nav-item active">
-							<a class="nav-link" href="propietarios.html">Propietarios</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="arrendatario.html">Arrendatario</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="https://www.ciencuadras.com/inmobiliaria/torres-y-cuadros-asociados-sas-8394"
-								target="_blank">Inmuebles</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#" data-toggle="modal" data-target="#en-construccion">Mantenimiento</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm" target="_blank">Pagos
-								PSE</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="empleados.html">Empleados</a>
-						</li>
-					</ul>
-				</div>
-			</nav>
+				<nav class="navbar navbar-expand-xl navbar-light bg-white fixed-top">
+					<div class="navbar-brand mr-0" href="index.html">
+						<a href="index.html"><img src="img/logo/Imagen1.png" alt="Torres y cuadros" class="mb-xs-1"></a>
+						<br><a class="text-dark font-weight-bold" href="tel:+031794364">PBX: 7 943 643 <i class="fas fa-phone"></i></a>
+					</div>
+					<div class="contacto pl-2 font-weight-bold">
+						<h3 class="text-dark mb-0">Inmobiliaria</h3>
+						<p class="text-dark mb-0">CR 27 No 53 - 61 OF 504 BOGOTÁ</p>
+						<p class="text-dark mb-0">CL 3D No 14 - 51 OF 303 ZIPAQUIRÁ</p>
+					</div>
+					<button class="navbar-toggler p-0" type="button" data-toggle="collapse" data-target="#nav-superior"
+						aria-controls="nav-superior" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse justify-content-end" id="nav-superior">
+						<ul class="navbar-nav text-center">
+							<li class="nav-item">
+								<a class="nav-link" href="index.html">Inicio</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#" data-toggle="modal" data-target="#en-construccion">Servicios</a>
+							</li>
+							<li class="nav-item active">
+								<a class="nav-link" href="propietarios.html">Propietarios</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="arrendatario.html">Arrendatario</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="https://www.ciencuadras.com/inmobiliaria/torres-y-cuadros-asociados-sas-8394"
+									target="_blank">Inmuebles</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#" data-toggle="modal" data-target="#en-construccion">Mantenimiento</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm" target="_blank">Pagos
+									PSE</a>
+							</li>
+							<!-- <li class="nav-item">
+								<a class="nav-link" href="empleados.html">Empleados</a>
+							</li> -->
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" id="Empleados" data-toggle="dropdown"
+									aria-haspopup="true" aria-expanded="false">Empleados</a>
+								<div class="dropdown-menu dropdown-primary" aria-labelledby="Empleados">
+									<a class="dropdown-item" href="empleados.html">CRM</a>
+									<a class="dropdown-item" href="https://portalco.net2phoneoffice.com/" target="_blank">PBX</a>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</nav>
 			<div class="container-fluid nav-2 orange darken-3">
 				<ul class="d-flex justify-content-start align-items-cente white-text">
 					<li class="mt-1"><a class="white-text" href="index.html"> Inicio </a></li>
