Actualización 18 de mayo

--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
 						</div>
 					</a>
 				</li>
-				<li id="btn-empleados" class="position-relative">
-					<a class="d-flex justify-content-center align-items-center" href="">
+				<li id="btn-empleados">
+					<a class="d-flex justify-content-center align-items-center" href="#">
 						<div class="text-center">
 							<img class="m-auto" src="img/PNG/empleados.png" alt="empleados">
 							<h3 class="text-center text-naranja mb-0 mt-1">EMPLEADOS</h3>
@@ -173,13 +173,13 @@
 					</a>
 					<a class="d-flex justify-content-center align-items-center btn-emergente btn-emergente1" href="empleados.html">
 						<div class="text-center">
-							<img class="m-auto" src="img/PNG/empleados.png" alt="empleados">
+							<img class="m-auto" src="img/PNG/crm.png" alt="empleados">
 							<h3 class="text-center text-naranja text-white mb-0 mt-1">CRM</h3>
 						</div>
 					</a>
-					<a class="d-flex justify-content-center align-items-center btn-emergente btn-emergente2" href="https://portalco.net2phoneoffice.com/">
+					<a class="d-flex justify-content-center align-items-center btn-emergente btn-emergente2" href="https://portalco.net2phoneoffice.com/" target="_blank">
 						<div class="text-center">
-							<img class="m-auto" src="img/PNG/empleados.png" alt="empleados">
+							<img class="m-auto" src="img/PNG/pbx.png" alt="empleados">
 							<h3 class="text-center text-naranja text-white mb-0 mt-1">PBX</h3>
 						</div>
 					</a>
