--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
 
 	<nav class="fixed-bottom">
-		<div class=" navegacion mt-2">
+		<div class="navegacion mt-2">
 			<ul class="container d-lg-flex justify-content-lg-around p-2 align-items-center">
 				<li id="btn-servicios">
 					<a class="d-flex justify-content-center align-items-center" href="#" data-toggle="modal"
@@ -138,12 +138,18 @@
 					</a>
 				</li>
 				<li id="btn-inmuebles">
-					<a class="d-flex justify-content-center align-items-center relative"
-						href="https://www.ciencuadras.com/inmobiliaria/torres-y-cuadros-asociados-sas-8394">
+					<a class="d-flex justify-content-center align-items-center relative" href="#">
 						<div class="text-center">
 							<img class="m-auto" id="inmuebles-nav" src="img/PNG/inmuebles.png" alt="inmuebles">
 							<h3 id="inmuebles-text" class="text-center text-naranja mb-0 font-weight-bold mt-1">
 								INMUEBLES</h3>
+						</div>
+					</a>
+					<a class="d-flex justify-content-center align-items-center btn-emergente btn-emergente0" target="_blank"
+						href="https://www.ciencuadras.com/inmobiliaria/torres-y-cuadros-asociados-sas-8394">
+						<div class="text-center">
+							<img class="m-auto" src="img/PNG/inmuebles.png" alt="Ciencuadras">
+							<h3 class="text-center text-naranja text-white mb-0 mt-1">En alianza con Ciencuadras</h3>
 						</div>
 					</a>
 				</li>
