ajustes para inmuebles y chat de pruebas

--- a/index.html
+++ b/index.html
@@ -138,20 +138,18 @@
 					</a>
 				</li>
 				<li id="btn-inmuebles">
-					<a class="d-flex justify-content-center align-items-center relative" href="#">
+					<a class="d-flex justify-content-center align-items-center relative" target="_blank"
+						href="https://www.ciencuadras.com/inmobiliaria/torres-y-cuadros-asociados-sas-8394">
 						<div class="text-center">
 							<img class="m-auto" id="inmuebles-nav" src="img/PNG/inmuebles.png" alt="inmuebles">
 							<h3 id="inmuebles-text" class="text-center text-naranja mb-0 font-weight-bold mt-1">
 								INMUEBLES</h3>
 						</div>
 					</a>
-					<a class="d-flex justify-content-center align-items-center btn-emergente btn-emergente0" target="_blank"
-						href="https://www.ciencuadras.com/inmobiliaria/torres-y-cuadros-asociados-sas-8394">
-						<div class="text-center">
-							<img class="m-auto" src="img/PNG/inmuebles.png" alt="Ciencuadras">
-							<h3 class="text-center text-naranja text-white mb-0 mt-1">En alianza con Ciencuadras</h3>
-						</div>
-					</a>
+					<div class="btn-emergente btn-emergente0" target="_blank">
+						<h3 class="text-center text-naranja text-white mb-0 mt-1 w-100">En alianza con</h3>
+						<img class="m-auto" src="img/logo/logo-ciencuadras-blanco.png" alt="Ciencuadras">
+					</div>
 				</li>
 				<li id="btn-mantenimientos">
 					<a class="d-flex justify-content-center align-items-center" href="#" data-toggle="modal" data-target="#en-construccion">
@@ -243,6 +241,8 @@
 	<script src="js/bootstrap.min.js"></script>
 	<!-- MDB core JavaScript -->
 	<script src="js/mdb.min.js"></script>
+
+	<script src="//code.tidio.co/qgqspxtuk1uhmk0gzvfa6hiktjvmvj1w.js"></script>
 </body>
 
 </html>
