--- a/Net2phone.html
+++ b/Net2phone.html
@@ -57,7 +57,7 @@
 									target="_blank">Inmuebles</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#" data-toggle="modal" data-target="#en-construccion">Mantenimiento</a>
+								<a class="nav-link" href="mantenimiento.html">Mantenimiento</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm" target="_blank">Pagos
