--- a/arrendatario.html
+++ b/arrendatario.html
@@ -57,7 +57,7 @@
 									target="_blank">Inmuebles</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#" data-toggle="modal" data-target="#en-construccion">Mantenimiento</a>
+								<a class="nav-link" href="mantenimiento.html">Mantenimiento</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm" target="_blank">Pagos
@@ -131,6 +131,23 @@
 
 
 	<!-- SCRIPTS -->
+
+		<!--Start of Tawk.to Script-->
+		<script type="text/javascript">
+			var Tawk_API = Tawk_API || {},
+				Tawk_LoadStart = new Date();
+			(function () {
+				var s1 = document.createElement("script"),
+					s0 = document.getElementsByTagName("script")[0];
+				s1.async = true;
+				s1.src = 'https://embed.tawk.to/5d36810b6d808312283981e0/default';
+				s1.charset = 'UTF-8';
+				s1.setAttribute('crossorigin', '*');
+				s0.parentNode.insertBefore(s1, s0);
+			})();
+		</script>
+		<!--End of Tawk.to Script-->
+
 	<!-- JQuery -->
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<!-- Bootstrap tooltips -->
