--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
 	<!-- Font Awesome v5.1.0 -->
 	<script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"
-		integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9"
-		crossorigin="anonymous"></script>
+		integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9" crossorigin="anonymous">
+	</script>
 	<!-- Bootstrap core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<!-- Material Design Bootstrap -->
@@ -59,7 +59,7 @@
 							target="_blank">Inmuebles</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#" data-toggle="modal" data-target="#en-construccion">Mantenimiento</a>
+						<a class="nav-link" href="mantenimiento.html">Mantenimiento</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm" target="_blank">Pagos
@@ -69,11 +69,11 @@
 						<a class="nav-link" href="empleados.html">Empleados</a>
 					</li> -->
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" id="Empleados" data-toggle="dropdown"
-						  aria-haspopup="true" aria-expanded="false">Empleados</a>
+						<a class="nav-link dropdown-toggle" id="Empleados" data-toggle="dropdown" aria-haspopup="true"
+							aria-expanded="false">Empleados</a>
 						<div class="dropdown-menu dropdown-primary" aria-labelledby="Empleados">
-						  <a class="dropdown-item" href="empleados.html">CRM</a>
-						  <a class="dropdown-item" href="https://portalco.net2phoneoffice.com/" target="_blank">PBX</a>
+							<a class="dropdown-item" href="empleados.html">CRM</a>
+							<a class="dropdown-item" href="https://portalco.net2phoneoffice.com/" target="_blank">PBX</a>
 						</div>
 					</li>
 				</ul>
@@ -102,7 +102,8 @@
 							<div class="degradado"></div>
 						</div>
 					</div>
-				`}
+				`
+				}
 			</script>
 		</div>
 	</div>
@@ -152,7 +153,7 @@
 					</div>
 				</li>
 				<li id="btn-mantenimientos">
-					<a class="d-flex justify-content-center align-items-center" href="#" data-toggle="modal" data-target="#en-construccion">
+					<a class="d-flex justify-content-center align-items-center" href="mantenimiento.html">
 						<div class="text-center">
 							<img class="m-auto" src="img/PNG/mantenimiento.png" alt="mantenimiento">
 							<h3 class="text-center text-naranja mb-0 mt-1">MANTENIMIENTOS</h3>
@@ -175,13 +176,15 @@
 							<h3 class="text-center text-naranja mb-0 mt-1">EMPLEADOS</h3>
 						</div>
 					</a>
-					<a class="d-flex justify-content-center align-items-center btn-emergente btn-emergente1" href="empleados.html">
+					<a class="d-flex justify-content-center align-items-center btn-emergente btn-emergente1"
+						href="empleados.html">
 						<div class="text-center">
 							<img class="m-auto" src="img/PNG/crm.png" alt="empleados">
 							<h3 class="text-center text-naranja text-white mb-0 mt-1">CRM</h3>
 						</div>
 					</a>
-					<a class="d-flex justify-content-center align-items-center btn-emergente btn-emergente2" href="https://portalco.net2phoneoffice.com/" target="_blank">
+					<a class="d-flex justify-content-center align-items-center btn-emergente btn-emergente2"
+						href="https://portalco.net2phoneoffice.com/" target="_blank">
 						<div class="text-center">
 							<img class="m-auto" src="img/PNG/pbx.png" alt="empleados">
 							<h3 class="text-center text-naranja text-white mb-0 mt-1">PBX</h3>
@@ -230,9 +233,25 @@
 
 
 
-
-
+	
 	<!-- SCRIPTS -->
+
+	<!--Start of Tawk.to Script-->
+	<script type="text/javascript">
+		var Tawk_API = Tawk_API || {},
+			Tawk_LoadStart = new Date();
+		(function () {
+			var s1 = document.createElement("script"),
+				s0 = document.getElementsByTagName("script")[0];
+			s1.async = true;
+			s1.src = 'https://embed.tawk.to/5d36810b6d808312283981e0/default';
+			s1.charset = 'UTF-8';
+			s1.setAttribute('crossorigin', '*');
+			s0.parentNode.insertBefore(s1, s0);
+		})();
+	</script>
+	<!--End of Tawk.to Script-->
+
 	<!-- JQuery -->
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<!-- Bootstrap tooltips -->
@@ -242,7 +261,9 @@
 	<!-- MDB core JavaScript -->
 	<script src="js/mdb.min.js"></script>
 
-	<script src="//code.tidio.co/qgqspxtuk1uhmk0gzvfa6hiktjvmvj1w.js"></script>
+	<!-- Tidio -->
+	<!-- <script src="//code.tidio.co/qgqspxtuk1uhmk0gzvfa6hiktjvmvj1w.js"></script> -->
+
 </body>
 
 </html>
