--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -11,8 +11,8 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- Font Awesome v5.1.0 -->
 	<script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"
-		integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9"
-		crossorigin="anonymous"></script>
+		integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9" crossorigin="anonymous">
+	</script>
 	<!-- Bootstrap core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<!-- Material Design Bootstrap -->
@@ -25,58 +25,59 @@
 	<header>
 		<div class="fixed-top">
 			<nav class="navbar navbar-expand-xl navbar-light bg-white fixed-top">
-					<div class="navbar-brand mr-0" href="index.html">
-						<a href="index.html"><img src="img/logo/Imagen1.png" alt="Torres y cuadros" class="mb-xs-1"></a>
-						<br><a class="text-dark font-weight-bold" href="tel:+031794364">PBX: 7 943 643 <i class="fas fa-phone"></i></a>
-					</div>
-					<div class="contacto pl-2 font-weight-bold">
-						<h3 class="text-dark mb-0">Inmobiliaria</h3>
-						<p class="text-dark mb-0">CR 27 No 53 - 61 OF 504 BOGOTÁ</p>
-						<p class="text-dark mb-0">CL 3D No 14 - 51 OF 303 ZIPAQUIRÁ</p>
-					</div>
-					<button class="navbar-toggler p-0" type="button" data-toggle="collapse" data-target="#nav-superior"
-						aria-controls="nav-superior" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<div class="collapse navbar-collapse justify-content-end" id="nav-superior">
-						<ul class="navbar-nav text-center">
-							<li class="nav-item">
-								<a class="nav-link" href="index.html">Inicio</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#" data-toggle="modal" data-target="#en-construccion">Servicios</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="propietarios.html">Propietarios</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="arrendatario.html">Arrendatario</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="https://www.ciencuadras.com/inmobiliaria/torres-y-cuadros-asociados-sas-8394"
-									target="_blank">Inmuebles</a>
-							</li>
-							<li class="nav-item active">
-								<a class="nav-link" href="#" data-toggle="modal" data-target="#en-construccion">Mantenimiento</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm" target="_blank">Pagos
-									PSE</a>
-							</li>
-							<!-- <li class="nav-item">
+				<div class="navbar-brand mr-0" href="index.html">
+					<a href="index.html"><img src="img/logo/Imagen1.png" alt="Torres y cuadros" class="mb-xs-1"></a>
+					<br><a class="text-dark font-weight-bold" href="tel:+031794364">PBX: 7 943 643 <i
+							class="fas fa-phone"></i></a>
+				</div>
+				<div class="contacto pl-2 font-weight-bold">
+					<h3 class="text-dark mb-0">Inmobiliaria</h3>
+					<p class="text-dark mb-0">CR 27 No 53 - 61 OF 504 BOGOTÁ</p>
+					<p class="text-dark mb-0">CL 3D No 14 - 51 OF 303 ZIPAQUIRÁ</p>
+				</div>
+				<button class="navbar-toggler p-0" type="button" data-toggle="collapse" data-target="#nav-superior"
+					aria-controls="nav-superior" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse justify-content-end" id="nav-superior">
+					<ul class="navbar-nav text-center">
+						<li class="nav-item">
+							<a class="nav-link" href="index.html">Inicio</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#" data-toggle="modal" data-target="#en-construccion">Servicios</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="propietarios.html">Propietarios</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="arrendatario.html">Arrendatario</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="https://www.ciencuadras.com/inmobiliaria/torres-y-cuadros-asociados-sas-8394"
+								target="_blank">Inmuebles</a>
+						</li>
+						<li class="nav-item active">
+							<a class="nav-link" href="mantenimiento.html">Mantenimiento</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="https://www.e-collect.com/customers/Torresycuadros.htm" target="_blank">Pagos
+								PSE</a>
+						</li>
+						<!-- <li class="nav-item">
 								<a class="nav-link" href="empleados.html">Empleados</a>
 							</li> -->
-							<li class="nav-item dropdown">
-								<a class="nav-link dropdown-toggle" id="Empleados" data-toggle="dropdown"
-									aria-haspopup="true" aria-expanded="false">Empleados</a>
-								<div class="dropdown-menu dropdown-primary" aria-labelledby="Empleados">
-									<a class="dropdown-item" href="empleados.html">CRM</a>
-									<a class="dropdown-item" href="https://portalco.net2phoneoffice.com/" target="_blank">PBX</a>
-								</div>
-							</li>
-						</ul>
-					</div>
-				</nav>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" id="Empleados" data-toggle="dropdown" aria-haspopup="true"
+								aria-expanded="false">Empleados</a>
+							<div class="dropdown-menu dropdown-primary" aria-labelledby="Empleados">
+								<a class="dropdown-item" href="empleados.html">CRM</a>
+								<a class="dropdown-item" href="https://portalco.net2phoneoffice.com/" target="_blank">PBX</a>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</nav>
 			<div class="container-fluid nav-2 orange darken-3">
 				<ul class="d-flex justify-content-start align-items-cente white-text">
 					<li class="mt-1"><a class="white-text" href="index.html"> Inicio </a></li>
@@ -90,10 +91,111 @@
 	</header>
 
 
-	<main>
-		<iframe class="completo"
-			src="https://docs.google.com/forms/d/e/1FAIpQLSfy5phMZ6G9Iw5pdRF_dt7I-HB4AVfztHPQIghLRYRIpfQTpQ/viewform?embedded=true"
-			frameborder="0" marginheight="0" marginwidth="0">Cargando...</iframe>
+	<main class="completo">
+		<section class="container mt-5">
+			<h1 class="mb-4">Preguntas Frecuentes</h1>
+
+			<!--Accordion wrapper-->
+			<div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
+
+				<!-- Accordion card -->
+				<div class="card">
+
+					<!-- Card header -->
+					<div class="card-header" role="tab" id="headingOne1">
+						<a data-toggle="collapse" data-parent="#accordionEx" href="#collapseOne1" aria-expanded="true"
+							aria-controls="collapseOne1">
+							<h5 class="mb-0 text-naranja">
+								Collapsible Group Item #1 <i class="fas fa-angle-down rotate-icon float-right"></i>
+							</h5>
+						</a>
+					</div>
+
+					<!-- Card body -->
+					<div id="collapseOne1" class="collapse show" role="tabpanel" aria-labelledby="headingOne1"
+						data-parent="#accordionEx">
+						<div class="card-body">
+							Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
+							wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum
+							eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
+							assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
+							nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
+							farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
+							labore sustainable VHS.
+						</div>
+					</div>
+
+				</div>
+				<!-- Accordion card -->
+
+				<!-- Accordion card -->
+				<div class="card">
+
+					<!-- Card header -->
+					<div class="card-header" role="tab" id="headingTwo2">
+						<a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseTwo2"
+							aria-expanded="false" aria-controls="collapseTwo2">
+							<h5 class="mb-0 text-naranja">
+								Collapsible Group Item #2 <i class="fas fa-angle-down rotate-icon float-right"></i>
+							</h5>
+						</a>
+					</div>
+
+					<!-- Card body -->
+					<div id="collapseTwo2" class="collapse" role="tabpanel" aria-labelledby="headingTwo2"
+						data-parent="#accordionEx">
+						<div class="card-body">
+							Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
+							wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum
+							eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
+							assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
+							nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
+							farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
+							labore sustainable VHS.
+						</div>
+					</div>
+
+				</div>
+				<!-- Accordion card -->
+
+				<!-- Accordion card -->
+				<div class="card">
+
+					<!-- Card header -->
+					<div class="card-header" role="tab" id="headingThree3">
+						<a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseThree3"
+							aria-expanded="false" aria-controls="collapseThree3">
+							<h5 class="mb-0 text-naranja">
+								Collapsible Group Item #3 <i class="fas fa-angle-down rotate-icon float-right"></i>
+							</h5>
+						</a>
+					</div>
+
+					<!-- Card body -->
+					<div id="collapseThree3" class="collapse" role="tabpanel" aria-labelledby="headingThree3"
+						data-parent="#accordionEx">
+						<div class="card-body">
+							Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
+							wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum
+							eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
+							assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
+							nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
+							farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
+							labore sustainable VHS.
+						</div>
+					</div>
+
+				</div>
+				<!-- Accordion card -->
+
+			</div>
+			<!-- Accordion wrapper -->
+		</section>
+
+
+
+
+
 	</main>
 
 
